# python_practice

./: .gitignore  README.md  pyproject.toml
src/python_practice/: __init__.py  errors.py  main.py  validation_sample.py
src/python_practice/foo_module/: __init__.py  bar.py
src/python_practice/models/: __init__.py  sample_models.py
src/python_practice/utils/: __init__.py  json_validator.py  rds_utility.py  s3_utility.py
tests/: conftest.py  test_json_validator.py  test_rds_utility.py  test_s3_utility.py
