[project]
name = "python-practice"
version = "0.1.0"
description = "S3 Utility and more - Practice project"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "boto3",
    "pydantic",
]
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "moto[s3]",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
